# Presentable

./: csv2html.py  do_md_parse.py  do_plantweb.py  mermaidtest.html  myTable.htm  pyproject.toml
ldm/: Literate.css  dict_to_html.py  do_build_ldm.py
ldm/ldm_models/: LiterateTester.md  LiterateTester.md2html.html  LiterateTester.md_2.html  LiterateTester_trace.txt  mermaid_test.md  mermaid_test_trace.txt  plantuml_test.md  plantuml_test_trace.txt
ldm/ldm_models/.obsidian/: community-plugins.json  workspace.json
ldm/ldm_models/.obsidian/plugins/emoji-shortcodes/: data.json
ldm/ldm_models/LiterateTester_results/: LiterateTester.dict.json  LiterateTester.dict.yaml  LiterateTester.html  LiterateTester.model.json  LiterateTester.model.yaml  LiterateTester.parsed.txt  LiterateTester.rendered.md
ldm/ldm_models/Literate_results/: Literate_md2html.html
ldm/ldm_models/mdtestdocs/: mdtest_doc.md  mdtest_doc.md_2.html
ldm/ldm_models/mermaid/: triples.txt
ldm/ldm_models/mermaid_test_results/: mermaid_test.dict.json  mermaid_test.dict.yaml  mermaid_test.html  mermaid_test.model.json  mermaid_test.model.yaml  mermaid_test.parsed.txt  mermaid_test.rendered.md
ldm/ldm_models/plantuml_test_results/: plantuml_test.dict.json  plantuml_test.dict.yaml  plantuml_test.parsed.txt
specdocs/: DiagramSpecs.md
