[tool.poetry]
name = "presentable"
version = "0.1.0"
description = "Presentable Object Model system"
authors = ["Your Name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
lark-parser = "^0.12.0"
confuse = "^2.0.1"
pyyaml = "^6.0.2"
setuptools = "^77.0.3"
lark = "^1.2.2"
emoji = "^2.14.1"
weasyprint = "^65.1"
html-to-markdown = "^1.3.2"
premailer = "^3.10.0"
diagrams = "^0.24.4"
pymupdf = "^1.25.5"
pymupdf4llm = "^0.0.22"
mdformat = "^0.7.22"
beautifulsoup4 = "^4.13.4"
inflect = "^7.5.0"
markdown = "^3.8"
pandas = "^2.2.3"
plantuml = "^0.3.0"
plantweb = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
